Fix broken "This a top performer" styling on mobile.
 Also change the padding-left for .council-name

--- a/scoring/static/scoring/scss/scoring-table.scss
+++ b/scoring/static/scoring/scss/scoring-table.scss
@@ -183,7 +183,6 @@ tbody th.council-name {
     .second-row th.council-name {
         min-width: 250px;
         padding-top: 12px;
-        padding-left: 35px;
         background-color: $color-scorecard-green-l1;
     }
 
@@ -447,9 +446,6 @@ $flex-basis-mobile-council: 80%;
             left: 0;
             width: 0;
             z-index: 1000;
-            @media only screen and (max-width: $table-desktop-breakpoint) {
-                display: none;
-            }
         }
     }
 
@@ -463,7 +459,7 @@ $flex-basis-mobile-council: 80%;
             .hover-message {
                opacity: 1;
                width: 230px;
-            } 
+            }
         }
     }
 }
@@ -472,6 +468,9 @@ $flex-basis-mobile-council: 80%;
     background-color: $color-scorecard-grey-900;
     padding: 8px;
     border-radius: $border-radius;
+    @media only screen and (max-width: $table-desktop-breakpoint) {
+        display: none;
+    }
     span {
         color: $white;
         
@@ -544,7 +543,6 @@ $padding-left: 8px;
         text-transform: uppercase;
         height: 48px;
         padding-top: 16px;
-        padding-left: 28px;
         background-color: $white;
     }
 
